# Arxiv-researcher

./: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  requirements.txt  vercel.json
backend/: .gitignore  main.py  pyproject.toml  requirements.txt
backend/src/: config.py
backend/src/helpers/: arvix_downloader.py
backend/src/llm/: gemini.py  websearch.py
backend/src/rag/: chunk.py  embed.py  extract.py  pipeline.py  rerank.py  store.py
backend/src/services/: ingest.py
backend/tests/: test_api.py  test_chunk.py  test_downloader.py  test_extract.py  test_gemini.py  test_websearch.py
frontend/: package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/abs/[arxiv_id]/: route.ts
frontend/app/api/auth/login/: route.ts
frontend/app/api/auth/logout/: route.ts
frontend/app/api/auth/signup/: route.ts
frontend/app/api/chat/: route.ts
frontend/app/api/chat/sessions/: route.ts
frontend/app/api/highlights/: route.ts
frontend/app/login/: page.tsx
frontend/app/login/[[...rest]]/: page.tsx
frontend/app/paper/[req_id]/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/signup/[[...rest]]/: page.tsx
frontend/components/: AnnotatedPanel.tsx  AuthForm.tsx  ChatPanel.tsx  CitationsPanel.tsx  HomeClient.tsx  LogoutButton.tsx  MarkdownRenderer.tsx  PaperReader.tsx  PdfViewer.tsx
frontend/db/: migrate.ts  schema.sql
frontend/lib/: auth.ts  backend.ts  db.ts  session.ts
frontend/tests/: session.test.ts
