[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv-downloader>=1.0.0",
    "fastapi>=0.138.0",
    "google-genai>=2.9.0",
    "gunicorn>=26.0.0",
    "openai>=2.43.0",
    "slowapi>=0.1.10",
    "uvicorn>=0.49.0",
]
