[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.1.0",
    "fastapi>=0.138.0",
    "fastembed>=0.8.0",
    "google-genai>=2.9.0",
    "gunicorn>=26.0.0",
    "openai>=2.43.0",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "slowapi>=0.1.10",
    "tavily-python>=0.7.26",
    "tiktoken>=0.13.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
